# Libarchive-Ruby

./: .gitignore  .hgignore  .hgtags  COPYING.libarchive  LICENSE.libbzip2  README  README.md  README.txt  libarchive-mswin32.gemspec  libarchive.gemspec  libarchive.sln  libarchive.vcproj  package.sh
ext/: archive_read_support_compression.c  archive_read_support_compression.h  archive_read_support_format.c  archive_read_support_format.h  archive_write_open_rb_str.c  archive_write_open_rb_str.h  archive_write_set_compression.c  archive_write_set_compression.h  config.h.in  configure  configure.in  depend  extconf.rb  libarchive.c  libarchive_archive.c  libarchive_entry.c  libarchive_internal.h  libarchive_reader.c  libarchive_win32.h  libarchive_writer.c
lib/: libarchive.rb  libarchive_ruby.rb
