#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT
AC_CONFIG_SRCDIR([archive_read_support_compression.c])
AC_CONFIG_HEADER([config.h])
AC_PROG_CC
AC_PROG_INSTALL
AC_SYS_LARGEFILE
AC_OUTPUT
